<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.feranmi.assignmenttrackingapp.AddCourse"
    android:weightSum="1">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/vamkLogo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tunnus"
        android:autoLink="web"
        android:contentDescription="@string/vamk_logo"
        android:layout_weight="0.64" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_course_page"
        android:id="@+id/addCoursePage"
        android:layout_gravity="center_horizontal"
        android:singleLine="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:hint="@string/course_id"
        android:id="@+id/courseIdEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/course_name"
        android:id="@+id/courseNameEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/course_description"
        android:id="@+id/descriptionEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/start_date"
        android:id="@+id/startDateEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/end_date"
        android:id="@+id/endDateEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:hint="@string/course_password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_gravity="center_horizontal" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/add_course"
        android:id="@+id/addCourseButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onAddCourse"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text=""
        android:id="@+id/courseAddingError"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page"
            android:paddingLeft="10dp"
            android:id="@+id/homePage"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:autoLink="all"
            android:onClick="onHomePage"
            android:textColor="#0a0915" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/logout"
            android:paddingRight="10dp"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:autoLink="all"
            android:onClick="onLogout"
            android:textColor="#0a0915" />

    </LinearLayout>


</LinearLayout>
