<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.feranmi.assignmenttrackingapp.StudentRegistration">

    <ImageView
        android:layout_width="132dp"
        android:layout_height="107dp"
        android:id="@+id/vamkLogo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tunnus"
        android:autoLink="web"
        android:contentDescription="@string/vamk_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/student_registration_page"
        android:id="@+id/studentRegistrationPage"
        android:layout_gravity="center_horizontal"
        android:singleLine="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:hint="@string/student_username"
        android:id="@+id/studentEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:hint="@string/firstname"
        android:id="@+id/firstnameEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:hint="@string/lastname"
        android:id="@+id/lastnameEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:hint="@string/studentPassword"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/studentRegister"
        android:id="@+id/studentRegisterButton"
        android:layout_gravity="center_horizontal"
        android:onClick="OnRegister"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text=""
        android:id="@+id/studentRegistrationError"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
