<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.feranmi.assignmenttrackingapp.TeacherLogin"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="132dp"
        android:layout_height="107dp"
        android:id="@+id/vamkLogo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tunnus"
        android:autoLink="web"
        android:contentDescription="@string/vamk_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/teacher_login_page"
        android:id="@+id/teacherLoginPage"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="55dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/if_not_register_click"
            android:id="@+id/link"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/here"
            android:onClick="teacherRegistration"
            android:autoLink="all"
            android:id="@+id/teacherRegister"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/light_blue"
            android:singleLine="false" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:hint="@string/teacher_username"
        android:id="@+id/teacherEditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_gravity="center_horizontal"
        android:onClick="onLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/error"
        android:id="@+id/teacherLoginError"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
